# vicwebsync

./: .gitignore  Cargo.toml  main.py  shell.nix  tgbot.py  webserver.py
src/: main.rs
