[package]
name = "vicwebsync"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
dotenv = "0.15.0"
env_logger = "0.11.3"
log = "0.4.22"
teloxide = "0.12.2"
tokio = "1.38.0"

[dependencies.mongodb]
version = "2.8.2"
features = ["tokio-sync"]

[dependencies.hyper]
version = "0.14"
features = ["full"]