[package]
name = "vicwebsync"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
dotenv = "0.15.0"
env_logger = "0.11.3"
futures = "0.3.30"
log = "0.4.22"
serde = "1.0.204"
serde_json = "1.0.120"
teloxide = "0.12.2"
serenity = "0.12"

[dependencies.mongodb]
version = "2.8.2"
features = ["tokio-runtime"]

[dependencies.hyper]
version = "0.14"
features = ["full"]

[dependencies.tokio]
version = "1.38.0"
features = ["full"]
